Release notes for xmlBlaster @version@ (http://www.xmlBlaster.org)
The "#99999" numbers are Subversion revision numbers.

Changes in current subversion repository (svn)
==============================================

 o #12949 it is now possible to send CDATA in content when using xmlBlaster script

 o #12948 BUGFIX: The combination of subscribe() and get() on the same topic with cluster=true failed
   Thanks to Michal Masa xmasam@sgi.felk.cvut.cz

 o #12938 login- and logout events now return the public session id in the "__sessionId" client property as a long 
 
 o #12936 Added subversion property "svn:eol-style=native" to resolve CRLF (Win) and LF (UNIX) problems
   Thanks to David Viner dviner@yahoo-inc.com

 o #12932 BUGFIX: hierarchical sync sequence: TopicHandler, MsgUnitWrapper, MsgUnitCache to avoid deadlock

 o #12930 util.Global now throws IllegalArgumentException if loading of Property instance fails

 o #12818 Extended multiSubscribe support
   - Fixed multiSubscribe=false for XPath queries
   - Added support to reconfigure AccessFilter settings for existing subscriptions
   See: http://www.xmlblaster.org/xmlBlaster/doc/requirements/engine.qos.subscribe.multiSubscribe.html

 o C++ client library:
   - #12937 FreeBSD port, support for BOOST added again, thanks to Viner, David <dviner@yahoo-inc.com>
   - #12877 Added xerces initialization from main thread, as on Windows it crashed sometimes if initialized from callback thread
   - #12871 Extended clientProperty API
   - #12870 Added xerces XMLPlatformUtils::Initialize PanicHandler
   - #12870 Added locale setting for xerces XMLPlatformUtils::Initialize, adjust with for example
            - xmlBlaster/locale "de_DE.iso-8859-1" or "en_US.UTF-8"
   - #12864 SOCKET driver: Removed obsolet mutex and obsolete thread
   - #12846 Changed connection_==0 check to be thread safe, passing now logging states to C library
   - #12823,#12825
      Added sax configuration usage help