@@ -4,7 +4,10 @@ The "#99999" numbers are Subversion revision numbers.
 Changes in current subversion repository (svn)
 ==============================================
 
- o #12949 it is now possible to send CDATA in content when using xmlBlaster script
+ o #12954 BUGFIX: Topic erase notification events could dead lock
+   when at the same time a subscriber callback delivery took place
+
+ o #12950 it is now possible to send CDATA in content when using xmlBlaster script
 
  o #12948 BUGFIX: The combination of subscribe() and get() on the same topic with cluster=true failed
    Thanks to Michal Masa xmasam@sgi.felk.cvut.cz
